Delete git cache files and Apply .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -191,4 +191,7 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
+# Kakao Login
+kakao_app_key.xml
+
 # End of https://www.toptal.com/developers/gitignore/api/kotlin,android,androidstudio
