--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,13 @@ dependencies {
 
     //custom calendar view
     implementation 'com.github.applikeysolutions:cosmocalendar:1.0.4'
+    implementation'com.google.android.material:material:1.6.0-alpha02'
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
+
 
     //ted permission
     implementation 'gun0912.ted:tedpermission:2.2.3'
+
+    //card view
+    implementation 'com.google.android.material:material:1.5.0'
 }
