--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
 
     //ted permission
     implementation 'gun0912.ted:tedpermission:2.2.3'
+
+    //card view
+    implementation 'com.google.android.material:material:1.5.0'
 }
