--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,16 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //recycler view
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
@@ -83,11 +86,9 @@ dependencies {
     implementation 'gun0912.ted:tedpermission:2.2.3'
 
     //kakao login
-    implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.30.0'
-    implementation group: 'com.kakao.sdk', name: 'kakaolink', version: '1.30.5'
-    implementation "com.kakao.sdk:v2-user:2.5.0" // 카카오 로그인
-    implementation "com.kakao.sdk:v2-talk:2.5.0" // 친구, 메시지(카카오톡)
-    implementation "com.kakao.sdk:v2-story:2.5.0" // 카카오스토리
-    implementation "com.kakao.sdk:v2-link:2.5.0" // 메시지(카카오링크)
-    implementation "com.kakao.sdk:v2-navi:2.5.0" // 카카오내비
+//    implementation "com.kakao.sdk:v2-user:2.5.0" // 카카오 로그인
+//    implementation "com.kakao.sdk:v2-talk:2.5.0" // 친구, 메시지(카카오톡)
+//    implementation "com.kakao.sdk:v2-story:2.5.0" // 카카오스토리
+//    implementation "com.kakao.sdk:v2-link:2.5.0" // 메시지(카카오링크)
+//    implementation "com.kakao.sdk:v2-navi:2.5.0" // 카카오내비
 }
