--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
 
     //구글 맵
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 
     //custom calendar view
     implementation 'com.github.applikeysolutions:cosmocalendar:1.0.4'
