--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,16 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.TripBook">
-        <activity android:name="com.olympos.tripbook.src.home.MainActivity"
-            android:exported="true">
+        <activity android:name="com.olympos.tripbook.src.home.MainActivity">
+
+        </activity>
+        <activity android:name="com.olympos.tripbook.src.splash.SplashActivity"
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name="com.olympos.tripbook.src.splash.SplashActivity"
-            >
-
         </activity>
 
         <activity android:name="com.olympos.tripbook.src.trip.TripActivity"/>
@@ -50,7 +50,7 @@
 <!--        구글 맵 임시 API Key -> 프로젝트 전체적인 키로 변경 필요-->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCXPqyHh43IFw-ywrq_ne2gK2ehwuOG2Wo" />
+            android:value="@string/google_app_key" />
     </application>
 
 </manifest>
