--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     //recycler view
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    //viewpager2
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
+
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
