--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,13 +29,7 @@
         </activity>
 
         <activity android:name="com.olympos.tripbook.src.trip.TripActivity"/>
-        <activity android:name="com.olympos.tripbook.src.tripcourse.TripcourseActivity"/>
-        <activity android:name="com.olympos.tripbook.src.tripcourse.TripcourseRecordActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="true">
-        </activity>
-        <activity android:name="com.olympos.tripbook.src.tripcourse.TripcourseSelectCountryActivity"/>
-        <activity android:name="com.olympos.tripbook.src.tripcourse.TripcourseSelectHashtagActivity"/>
+<!--        <activity android:name="com.olympos.tripbook.src.tripcourse.TripcourseActivity"/>-->
         <activity android:name="com.olympos.tripbook.src.user.SigninActivity"/>
         <activity android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
@@ -48,7 +42,6 @@
                     android:scheme="@string/kakao_native_key"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.olympos.tripbook.src.tripcourse_view.TripcourseRecordViewActivity"/>
 
 <!--        구글 맵 임시 API Key -> 프로젝트 전체적인 키로 변경 필요-->
         <meta-data
