--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".src.user.MypageActivity"/>
+        <activity android:name=".src.mypage.MyPageActivity"/>
         <activity android:name="com.olympos.tripbook.src.trip.TripActivity"/>
 <!--        <activity android:name="com.olympos.tripbook.src.tripcourse.TripcourseActivity"/>-->
         <activity android:name="com.olympos.tripbook.src.user.SigninActivity"/>
