--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    //google map
-    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
-    //firebase
-    id 'com.google.gms.google-services'
+    id 'com.google.gms.google-services' //firebase
 }
 
 android {
@@ -41,12 +38,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
+    testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -66,10 +63,10 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
     //room
-    implementation "androidx.room:room-runtime:2.4.1"
-    kapt "androidx.room:room-compiler:2.4.1"
-    implementation "androidx.room:room-ktx:2.4.1"
-    testImplementation "androidx.room:room-testing:2.4.1"
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation "androidx.room:room-ktx:2.4.3"
+    testImplementation "androidx.room:room-testing:2.4.3"
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -81,26 +78,19 @@ dependencies {
     //circle indicator
     implementation 'me.relex:circleindicator:2.1.6'
 
-    //구글 맵
-    implementation 'com.google.android.gms:play-services-maps:18.0.2'
-    implementation 'com.google.android.gms:play-services-location:19.0.1'
-
     //custom calendar view
     implementation 'com.github.applikeysolutions:cosmocalendar:1.0.4'
-    implementation'com.google.android.material:material:1.6.0-alpha02'
+    implementation 'com.google.android.material:material:1.6.0-alpha02'  // card view
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
 
     //ted permission
     implementation 'gun0912.ted:tedpermission:2.2.3'
 
-    //card view
-    implementation 'com.google.android.material:material:1.5.0'
-
     //kakao login
-    implementation "com.kakao.sdk:v2-user:2.8.5" // 카카오 로그인
+    implementation "com.kakao.sdk:v2-user:2.8.5"
 
     //firebase
-    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.1'
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
