[fix] app key to native, unannotation theme

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
                     android:host="oauth"
-                    android:scheme="@string/kakao_app_key"/>
+                    android:scheme="@string/kakao_native_key"/>
             </intent-filter>
         </activity>
 
