--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.olympos.tripbook"
         minSdk 21
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -39,13 +39,13 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
-    testImplementation 'junit:junit:'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.2'
+
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'me.relex:circleindicator:2.1.6'
 
     //recycler view
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -80,7 +80,7 @@ dependencies {
 
     //custom calendar view
     implementation 'com.github.applikeysolutions:cosmocalendar:1.0.4'
-    implementation 'com.google.android.material:material:1.6.0-alpha02'  // card view
+    implementation 'com.google.android.material:material:1.8.0-alpha01'  // card view
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
 
     //ted permission
@@ -90,8 +90,12 @@ dependencies {
     implementation "com.kakao.sdk:v2-user:2.8.5"
 
     //firebase
-    implementation 'com.google.firebase:firebase-storage:20.0.1'
+    implementation 'com.google.firebase:firebase-storage:20.0.2'
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'junit:junit'
 
 }
